--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-15
 
-android.library.reference.1=C:/Users/Z-L/Documents/GitHub/WizAndroidSDK
+android.library.reference.1=../SkyMbaSDK
